create new BCs based on improved monthly ave

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -46,15 +46,15 @@
     "rimwidthE  = 20\n",
     "\n",
     "# Boundary coordinates: (i1,i2,j1,j2)\n",
-    "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin # tried 777, 797; off\n",
-    "bdy_WCB = (2168,2178,390,797) # Western Canada Basin # tried 2167, 2177; off.\n",
-    "bdy_LS  = (1140,1150,446,672) # Baffin Bay ## works well\n",
-    "bdy_HB  = (1190,1472,291,301) # Hudson Bay ## works well"
+    "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin \n",
+    "bdy_WCB = (2168,2178,390,797) # Western Canada Basin \n",
+    "bdy_LS  = (1140,1150,446,672) # Baffin Bay\n",
+    "bdy_HB  = (1190,1472,291,301) # Hudson Bay"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,23 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_climatology(year, month):        \n",
     "    # load year 2015 climatology of ANHA12 gridT file:\n",
-    "    df_gridT = xr.open_dataset(f'/data/brogalla/ANHA12/gridT_{year}_{month}.nc')\n",
+    "    df_gridT = xr.open_dataset(f'/data/brogalla/ANHA12/new_averages/gridT_{year}_{month}.nc')\n",
     "    \n",
-    "    bdy_temp = df_gridT['votemper'].values[0,:,:,:]\n",
-    "    bdy_sal  = df_gridT['vosaline'].values[0,:,:,:]\n",
+    "    bdy_temp = df_gridT['votemper'].values[:,:,:]\n",
+    "    bdy_sal  = df_gridT['vosaline'].values[:,:,:]\n",
     "    \n",
     "    return bdy_temp, bdy_sal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,8 @@
     "            \"x4\": np.zeros(np.max(dPb_west_BC.shape))\n",
     "        },\n",
     "    )\n",
-    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb_OBC_y{year}m{month:02}.nc', unlimited_dims='time_counter')\n",
+    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-202209-forcing/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "                         unlimited_dims='time_counter')\n",
     "    \n",
     "    return"
    ]
@@ -327,12 +328,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load climatology conditions: \n",
-    "year = 2003\n",
+    "year = 2005\n",
     "\n",
     "LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
     "nCB_T = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2])); nCB_S = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2]));\n",
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
