new BCs and slightly shifted HB coordinates

--- a/paper3/surface_field.ipynb
+++ b/paper3/surface_field.ipynb
@@ -9,6 +9,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Similar function but for BLING:\n",
+    "folder = '/ocean/brogalla/GEOTRACES/BLING-EMP101/ANHA4-EPM101_y2002m01d05_gridB.nc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2002m01d05'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folder[53:63]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
