--- a/paper3/M3-BC-TS.ipynb
+++ b/paper3/M3-BC-TS.ipynb
@@ -48,10 +48,10 @@
     "rimwidthE  = 20\n",
     "\n",
     "# Boundary coordinates: (i1,i2,j1,j2)\n",
-    "bdy_NCB = (1600,imax,jmax,jmax) # Northern Canada Basin\n",
-    "bdy_WCB = (imax,imax,391,jmax)  # Western Canada Basin\n",
-    "bdy_LS  = (imin,imin,449,674)   # Labrador Sea\n",
-    "bdy_HB  = (1189,1474,291,291)   # Hudson Bay"
+    "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin \n",
+    "bdy_WCB = (2168,2178,390,797) # Western Canada Basin \n",
+    "bdy_LS  = (1140,1150,446,672) # Baffin Bay\n",
+    "bdy_HB  = (1190,1472,293,303) # Hudson Bay"
    ]
   },
   {
