--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
     "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin \n",
     "bdy_WCB = (2168,2178,390,797) # Western Canada Basin \n",
     "bdy_LS  = (1140,1150,446,672) # Baffin Bay\n",
-    "bdy_HB  = (1190,1472,293,303) # Hudson Bay"
+    "bdy_HB  = (1190,1472,291,301) # Hudson Bay"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,102 +329,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load climatology conditions: \n",
-    "year = 2020\n",
-    "\n",
-    "LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
-    "nCB_T = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2])); nCB_S = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2]));\n",
-    "wCB_T = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2])); wCB_S = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2]));\n",
-    "HB_T  = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]));     HB_S  = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]));\n",
-    "\n",
-    "for month in range(1,12):\n",
-    "    temp, sal  = load_climatology(year, f'{month:02}')\n",
-    "    \n",
-    "    LS_T[month-1,:,:,:]  = temp[:,bdy_LS[0]:bdy_LS[1],bdy_LS[2]:bdy_LS[3]]\n",
-    "    LS_S[month-1,:,:,:]  = sal[:,bdy_LS[0]:bdy_LS[1],bdy_LS[2]:bdy_LS[3]]\n",
-    "    nCB_T[month-1,:,:,:] = temp[:,bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]:bdy_NCB[3]]\n",
-    "    nCB_S[month-1,:,:,:] = sal[:,bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]:bdy_NCB[3]]\n",
-    "    wCB_T[month-1,:,:,:] = temp[:,bdy_WCB[0]:bdy_WCB[1],bdy_WCB[2]:bdy_WCB[3]]\n",
-    "    wCB_S[month-1,:,:,:] = sal[:,bdy_WCB[0]:bdy_WCB[1],bdy_WCB[2]:bdy_WCB[3]]\n",
-    "    HB_T[month-1,:,:,:]  = temp[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]] \n",
-    "    HB_S[month-1,:,:,:]  = sal[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create boundary conditions:\n",
-    "LS_depth = np.tile(depths, (bdy_LS[3]-bdy_LS[2],rimwidthS,1)).transpose()\n",
-    "dPb_LS   = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]))\n",
-    "dPb_nCB  = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2]))\n",
-    "dPb_wCB  = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2]))\n",
-    "dPb_HB   = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]))\n",
-    "\n",
-    "for month in range(1,13):\n",
-    "    if (month > 5) & (month < 12):\n",
-    "        dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=True)\n",
-    "    else:\n",
-    "        dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=False)\n",
-    "    dPb_nCB[month-1,:,:,:] = create_AO_BC(nCB_T[month-1], nCB_S[month-1])\n",
-    "    dPb_wCB[month-1,:,:,:] = create_AO_BC(wCB_T[month-1], wCB_S[month-1])\n",
-    "    dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])\n",
-    "    \n",
-    "dPb_LS[np.isnan(dPb_LS)]   = 3e-12\n",
-    "dPb_nCB[np.isnan(dPb_nCB)] = 3e-12\n",
-    "dPb_wCB[np.isnan(dPb_wCB)] = 3e-12\n",
-    "dPb_HB[np.isnan(dPb_HB)]   = 3e-12\n",
-    "\n",
-    "## or base on bathy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dPb_wCBr = np.flip(dPb_wCB, axis=2)\n",
-    "dPb_nCBr = np.flip(dPb_nCB, axis=3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Reshape boundary conditions and write to file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for month in range(1,13):\n",
-    "    dPb_north_BC = reshape_boundary(rimwidthN, dPb_wCBr[month-1], 'C')\n",
-    "    dPb_east_BC  = reshape_boundary(rimwidthE, dPb_nCBr[month-1], 'F')\n",
-    "    dPb_south_BC = reshape_boundary(rimwidthS, dPb_LS[month-1], 'C')\n",
-    "    dPb_west_BC  = reshape_boundary(rimwidthW, dPb_HB[month-1], 'F')\n",
-    "    \n",
-    "    save_file(year, month)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2002\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2003\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2004\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2005\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2006\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2007\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2008\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2009\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2010\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2011\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2012\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2013\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2014\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2015\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2016\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2017\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2018\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2019\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2020\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
@@ -433,11 +435,64 @@
     }
    ],
    "source": [
-    "# Check that there are no NaN values in the files:\n",
-    "print('North BC # of NaNs:', sum(dPb_north_BC[np.isnan(dPb_north_BC)]))\n",
-    "print('East BC # of NaNs: ', sum(dPb_east_BC[np.isnan(dPb_east_BC)]))\n",
-    "print('South BC # of NaNs:', sum(dPb_south_BC[np.isnan(dPb_south_BC)]))\n",
-    "print('West BC # of NaNs: ', sum(dPb_west_BC[np.isnan(dPb_west_BC)]))"
+    "for year in range(2002,2021):\n",
+    "\n",
+    "    print(year)\n",
+    "    LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
+    "    nCB_T = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2])); nCB_S = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2]));\n",
+    "    wCB_T = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2])); wCB_S = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2]));\n",
+    "    HB_T  = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]));     HB_S  = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]));\n",
+    "\n",
+    "    for month in range(1,12):\n",
+    "        temp, sal  = load_climatology(year, f'{month:02}')\n",
+    "\n",
+    "        LS_T[month-1,:,:,:]  = temp[:,bdy_LS[0]:bdy_LS[1],bdy_LS[2]:bdy_LS[3]]\n",
+    "        LS_S[month-1,:,:,:]  = sal[:,bdy_LS[0]:bdy_LS[1],bdy_LS[2]:bdy_LS[3]]\n",
+    "        nCB_T[month-1,:,:,:] = temp[:,bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]:bdy_NCB[3]]\n",
+    "        nCB_S[month-1,:,:,:] = sal[:,bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]:bdy_NCB[3]]\n",
+    "        wCB_T[month-1,:,:,:] = temp[:,bdy_WCB[0]:bdy_WCB[1],bdy_WCB[2]:bdy_WCB[3]]\n",
+    "        wCB_S[month-1,:,:,:] = sal[:,bdy_WCB[0]:bdy_WCB[1],bdy_WCB[2]:bdy_WCB[3]]\n",
+    "        HB_T[month-1,:,:,:]  = temp[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]] \n",
+    "        HB_S[month-1,:,:,:]  = sal[:,bdy_HB[0]:bdy_HB[1],bdy_HB[2]:bdy_HB[3]]\n",
+    "        \n",
+    "    \n",
+    "    # Create boundary conditions:\n",
+    "    LS_depth = np.tile(depths, (bdy_LS[3]-bdy_LS[2],rimwidthS,1)).transpose()\n",
+    "    dPb_LS   = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]))\n",
+    "    dPb_nCB  = np.zeros((12,50,bdy_NCB[1]-bdy_NCB[0],bdy_NCB[3]-bdy_NCB[2]))\n",
+    "    dPb_wCB  = np.zeros((12,50,bdy_WCB[1]-bdy_WCB[0],bdy_WCB[3]-bdy_WCB[2]))\n",
+    "    dPb_HB   = np.zeros((12,50,bdy_HB[1]-bdy_HB[0],bdy_HB[3]-bdy_HB[2]))\n",
+    "\n",
+    "    for month in range(1,13):\n",
+    "        if (month > 5) & (month < 12):\n",
+    "            dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=True)\n",
+    "        else:\n",
+    "            dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=False)\n",
+    "        dPb_nCB[month-1,:,:,:] = create_AO_BC(nCB_T[month-1], nCB_S[month-1])\n",
+    "        dPb_wCB[month-1,:,:,:] = create_AO_BC(wCB_T[month-1], wCB_S[month-1])\n",
+    "        dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])\n",
+    "\n",
+    "    dPb_LS[np.isnan(dPb_LS)]   = 3e-12\n",
+    "    dPb_nCB[np.isnan(dPb_nCB)] = 3e-12\n",
+    "    dPb_wCB[np.isnan(dPb_wCB)] = 3e-12\n",
+    "    dPb_HB[np.isnan(dPb_HB)]   = 3e-12\n",
+    "    \n",
+    "    dPb_wCBr = np.flip(dPb_wCB, axis=2)\n",
+    "    dPb_nCBr = np.flip(dPb_nCB, axis=3)\n",
+    "    \n",
+    "    for month in range(1,13):\n",
+    "        dPb_north_BC = reshape_boundary(rimwidthN, dPb_wCBr[month-1], 'C')\n",
+    "        dPb_east_BC  = reshape_boundary(rimwidthE, dPb_nCBr[month-1], 'F')\n",
+    "        dPb_south_BC = reshape_boundary(rimwidthS, dPb_LS[month-1], 'C')\n",
+    "        dPb_west_BC  = reshape_boundary(rimwidthW, dPb_HB[month-1], 'F')\n",
+    "\n",
+    "        save_file(year, month)\n",
+    "        \n",
+    "    # Check that there are no NaN values in the files:\n",
+    "    print('North BC # of NaNs:', sum(dPb_north_BC[np.isnan(dPb_north_BC)]))\n",
+    "    print('East BC # of NaNs: ', sum(dPb_east_BC[np.isnan(dPb_east_BC)]))\n",
+    "    print('South BC # of NaNs:', sum(dPb_south_BC[np.isnan(dPb_south_BC)]))\n",
+    "    print('West BC # of NaNs: ', sum(dPb_west_BC[np.isnan(dPb_west_BC)]))"
    ]
   },
   {
