Checked forcing files and updated boundary conditions for Mn extended domain run for Pb litho/authigenic particle field

--- a/paper3/forcing/mn-extended-domain/photo-reduction.ipynb
+++ b/paper3/forcing/mn-extended-domain/photo-reduction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imin, imax = 1099, 2179\n",
-    "jmin, jmax = 159, 799"
+    "jmin, jmax = 159, 799\n",
+    "imin, imax = 1139, 2179"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,36 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculation reduction rate multipliers for 2002\n",
-      "Calculation reduction rate multipliers for 2003\n",
-      "Calculation reduction rate multipliers for 2004\n",
-      "Calculation reduction rate multipliers for 2005\n",
-      "Calculation reduction rate multipliers for 2006\n",
-      "Calculation reduction rate multipliers for 2007\n",
-      "Calculation reduction rate multipliers for 2008\n",
-      "Calculation reduction rate multipliers for 2009\n",
-      "Calculation reduction rate multipliers for 2010\n",
-      "Calculation reduction rate multipliers for 2011\n",
-      "Calculation reduction rate multipliers for 2012\n",
-      "Calculation reduction rate multipliers for 2013\n",
-      "Calculation reduction rate multipliers for 2014\n",
-      "Calculation reduction rate multipliers for 2015\n",
-      "Calculation reduction rate multipliers for 2016\n",
-      "Calculation reduction rate multipliers for 2017\n",
-      "Calculation reduction rate multipliers for 2018\n",
-      "Calculation reduction rate multipliers for 2019\n"
+      "Calculation reduction rate multipliers for 2020\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2002,2020):\n",
+    "for year in range(2020,2021):\n",
     "    print(f'Calculation reduction rate multipliers for {year}')\n",
     "    red_multiplier_year = red_rate_calc(year)\n",
     "    save_file(year, red_multiplier_year)"
@@ -168,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58.0 1.0 13.190254\n"
+      "58.0 1.0 13.120495\n"
      ]
     }
    ],
