added ave calc for omn

--- a/paper3/calculate-ave.ipynb
+++ b/paper3/calculate-ave.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,6 +267,291 @@
    "source": [
     "for month in range(1,13):\n",
     "    T_ave_200401, S_ave_200401 = calculate_monthly_average('/data/brogalla/ANHA12/', 2020, month)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mn extended domain run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_Mn_to_file(Mn, year, month):\n",
+    "    \n",
+    "    file_write = xr.Dataset(\n",
+    "        {'oxidismn' : ((\"deptht\",\"y\",\"x\"), Mn)}, \n",
+    "        coords = {\n",
+    "            \"time_counter\": np.zeros(1),\n",
+    "            \"deptht\": mesh_depth,\n",
+    "            \"y\": np.zeros(mesh_lat[imin:imax,jmin:jmax].shape[0]),\n",
+    "            \"x\": np.zeros(mesh_lon[imin:imax,jmin:jmax].shape[1])},\n",
+    "    )\n",
+    "    \n",
+    "    file_write.to_netcdf(f'/data/brogalla/run_storage/Mn-extended-domain-202210/oMn_y{year}m{month:02}.nc', unlimited_dims='time_counter')\n",
+    "    \n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_monthly_oMn_average(folder_ref, year, month):\n",
+    "    # Calculate monthly average: \n",
+    "    file_list = list(np.sort(glob.glob(f'{folder_ref}'+\\\n",
+    "                                       f'ANHA12_EXH006_5d_{year}0101_{year}1231_ptrc_T_{year}????-{year}{month:02}??.nc')))\n",
+    "    max_day   = datetime.strptime(file_list[-1][130:138],'%Y%m%d').day\n",
+    "\n",
+    "    # if the last file in the list does not contain the last day in the month, also load the first file of the next month\n",
+    "    if max_day < days_in_month[month-1]:\n",
+    "        files_next_month = np.sort(glob.glob(f'{folder_ref}'+\\\n",
+    "                                             f'ANHA12_EXH006_5d_{year}0101_{year}1231_ptrc_T_{year}{month:02}??-{year}{month+1:02}??.nc'))\n",
+    "        file_list.append(files_next_month[0])\n",
+    "        \n",
+    "    # read in each data file\n",
+    "    monthly_sum_oMn = 0;\n",
+    "    sum_days = 0\n",
+    "    for file in file_list:\n",
+    "        ds   = xr.open_dataset(f'{file}')\n",
+    "        omn  = ds['oxidismn'].values[0,:,:,:]\n",
+    "        \n",
+    "        date = datetime.strptime(file[130:138],'%Y%m%d')\n",
+    "#         print(date)\n",
+    "        if (date.day - 5 >= 0) & (date.day <= days_in_month[month-1]):\n",
+    "            monthly_sum_oMn += omn*(5) # since these are five-day files\n",
+    "            sum_days +=5\n",
+    "            print(f'Normal case: {date}, multiply by 5')\n",
+    "        elif (date.month == month) & (date.day - 5 < 0):\n",
+    "            monthly_sum_oMn += omn*(date.day)\n",
+    "            sum_days += date.day\n",
+    "            print(f'Start of month: {date}, multiply by {date.day}')\n",
+    "        elif (date.month != month) & (date.day - 5 < 0):\n",
+    "            monthly_sum_oMn += omn*(days_in_month[month-1] - max_day)\n",
+    "            sum_days += (days_in_month[month-1] - max_day)\n",
+    "            print(f'End of month: {date}, multiply by {(days_in_month[month-1] - max_day)}')\n",
+    "        \n",
+    "    monthly_oMn_ave = monthly_sum_oMn / days_in_month[month-1]\n",
+    "   \n",
+    "    print(sum_days, days_in_month[month-1])\n",
+    "\n",
+    "    write_Mn_to_file(monthly_oMn_ave, year, month)\n",
+    "  \n",
+    "    return monthly_oMn_ave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normal case: 2002-01-05 00:00:00, multiply by 5\n",
+      "Normal case: 2002-01-10 00:00:00, multiply by 5\n",
+      "Normal case: 2002-01-15 00:00:00, multiply by 5\n",
+      "Normal case: 2002-01-20 00:00:00, multiply by 5\n",
+      "Normal case: 2002-01-25 00:00:00, multiply by 5\n",
+      "Normal case: 2002-01-30 00:00:00, multiply by 5\n",
+      "End of month: 2002-02-04 00:00:00, multiply by 1\n",
+      "31 31\n",
+      "Start of month: 2002-02-04 00:00:00, multiply by 4\n",
+      "Normal case: 2002-02-09 00:00:00, multiply by 5\n",
+      "Normal case: 2002-02-14 00:00:00, multiply by 5\n",
+      "Normal case: 2002-02-19 00:00:00, multiply by 5\n",
+      "Normal case: 2002-02-24 00:00:00, multiply by 5\n",
+      "End of month: 2002-03-01 00:00:00, multiply by 4\n",
+      "28 28\n",
+      "Start of month: 2002-03-01 00:00:00, multiply by 1\n",
+      "Normal case: 2002-03-06 00:00:00, multiply by 5\n",
+      "Normal case: 2002-03-11 00:00:00, multiply by 5\n",
+      "Normal case: 2002-03-16 00:00:00, multiply by 5\n",
+      "Normal case: 2002-03-21 00:00:00, multiply by 5\n",
+      "Normal case: 2002-03-26 00:00:00, multiply by 5\n",
+      "Normal case: 2002-03-31 00:00:00, multiply by 5\n",
+      "31 31\n",
+      "Normal case: 2002-04-05 00:00:00, multiply by 5\n",
+      "Normal case: 2002-04-10 00:00:00, multiply by 5\n",
+      "Normal case: 2002-04-15 00:00:00, multiply by 5\n",
+      "Normal case: 2002-04-20 00:00:00, multiply by 5\n",
+      "Normal case: 2002-04-25 00:00:00, multiply by 5\n",
+      "Normal case: 2002-04-30 00:00:00, multiply by 5\n",
+      "30 30\n",
+      "Normal case: 2002-05-05 00:00:00, multiply by 5\n",
+      "Normal case: 2002-05-10 00:00:00, multiply by 5\n",
+      "Normal case: 2002-05-15 00:00:00, multiply by 5\n",
+      "Normal case: 2002-05-20 00:00:00, multiply by 5\n",
+      "Normal case: 2002-05-25 00:00:00, multiply by 5\n",
+      "Normal case: 2002-05-30 00:00:00, multiply by 5\n",
+      "End of month: 2002-06-04 00:00:00, multiply by 1\n",
+      "31 31\n",
+      "Start of month: 2002-06-04 00:00:00, multiply by 4\n",
+      "Normal case: 2002-06-09 00:00:00, multiply by 5\n",
+      "Normal case: 2002-06-14 00:00:00, multiply by 5\n",
+      "Normal case: 2002-06-19 00:00:00, multiply by 5\n",
+      "Normal case: 2002-06-24 00:00:00, multiply by 5\n",
+      "Normal case: 2002-06-29 00:00:00, multiply by 5\n",
+      "End of month: 2002-07-04 00:00:00, multiply by 1\n",
+      "30 30\n",
+      "Start of month: 2002-07-04 00:00:00, multiply by 4\n",
+      "Normal case: 2002-07-09 00:00:00, multiply by 5\n",
+      "Normal case: 2002-07-14 00:00:00, multiply by 5\n",
+      "Normal case: 2002-07-19 00:00:00, multiply by 5\n",
+      "Normal case: 2002-07-24 00:00:00, multiply by 5\n",
+      "Normal case: 2002-07-29 00:00:00, multiply by 5\n",
+      "End of month: 2002-08-03 00:00:00, multiply by 2\n",
+      "31 31\n",
+      "Start of month: 2002-08-03 00:00:00, multiply by 3\n",
+      "Normal case: 2002-08-08 00:00:00, multiply by 5\n",
+      "Normal case: 2002-08-13 00:00:00, multiply by 5\n",
+      "Normal case: 2002-08-18 00:00:00, multiply by 5\n",
+      "Normal case: 2002-08-23 00:00:00, multiply by 5\n",
+      "Normal case: 2002-08-28 00:00:00, multiply by 5\n",
+      "End of month: 2002-09-02 00:00:00, multiply by 3\n",
+      "31 31\n",
+      "Start of month: 2002-09-02 00:00:00, multiply by 2\n",
+      "Normal case: 2002-09-07 00:00:00, multiply by 5\n",
+      "Normal case: 2002-09-12 00:00:00, multiply by 5\n",
+      "Normal case: 2002-09-17 00:00:00, multiply by 5\n",
+      "Normal case: 2002-09-22 00:00:00, multiply by 5\n",
+      "Normal case: 2002-09-27 00:00:00, multiply by 5\n",
+      "End of month: 2002-10-02 00:00:00, multiply by 3\n",
+      "30 30\n",
+      "Start of month: 2002-10-02 00:00:00, multiply by 2\n",
+      "Normal case: 2002-10-07 00:00:00, multiply by 5\n",
+      "Normal case: 2002-10-12 00:00:00, multiply by 5\n",
+      "Normal case: 2002-10-17 00:00:00, multiply by 5\n",
+      "Normal case: 2002-10-22 00:00:00, multiply by 5\n",
+      "Normal case: 2002-10-27 00:00:00, multiply by 5\n",
+      "End of month: 2002-11-01 00:00:00, multiply by 4\n",
+      "31 31\n",
+      "Start of month: 2002-11-01 00:00:00, multiply by 1\n",
+      "Normal case: 2002-11-06 00:00:00, multiply by 5\n",
+      "Normal case: 2002-11-11 00:00:00, multiply by 5\n",
+      "Normal case: 2002-11-16 00:00:00, multiply by 5\n",
+      "Normal case: 2002-11-21 00:00:00, multiply by 5\n",
+      "Normal case: 2002-11-26 00:00:00, multiply by 5\n",
+      "End of month: 2002-12-01 00:00:00, multiply by 4\n",
+      "30 30\n",
+      "Start of month: 2002-12-01 00:00:00, multiply by 1\n",
+      "Normal case: 2002-12-06 00:00:00, multiply by 5\n",
+      "Normal case: 2002-12-11 00:00:00, multiply by 5\n",
+      "Normal case: 2002-12-16 00:00:00, multiply by 5\n",
+      "Normal case: 2002-12-21 00:00:00, multiply by 5\n",
+      "Normal case: 2002-12-26 00:00:00, multiply by 5\n",
+      "Normal case: 2002-12-31 00:00:00, multiply by 5\n",
+      "31 31\n",
+      "Normal case: 2003-01-05 00:00:00, multiply by 5\n",
+      "Normal case: 2003-01-10 00:00:00, multiply by 5\n",
+      "Normal case: 2003-01-15 00:00:00, multiply by 5\n",
+      "Normal case: 2003-01-20 00:00:00, multiply by 5\n",
+      "Normal case: 2003-01-25 00:00:00, multiply by 5\n",
+      "Normal case: 2003-01-30 00:00:00, multiply by 5\n",
+      "End of month: 2003-02-04 00:00:00, multiply by 1\n",
+      "31 31\n",
+      "Start of month: 2003-02-04 00:00:00, multiply by 4\n",
+      "Normal case: 2003-02-09 00:00:00, multiply by 5\n",
+      "Normal case: 2003-02-14 00:00:00, multiply by 5\n",
+      "Normal case: 2003-02-19 00:00:00, multiply by 5\n",
+      "Normal case: 2003-02-24 00:00:00, multiply by 5\n",
+      "End of month: 2003-03-01 00:00:00, multiply by 4\n",
+      "28 28\n",
+      "Start of month: 2003-03-01 00:00:00, multiply by 1\n",
+      "Normal case: 2003-03-06 00:00:00, multiply by 5\n",
+      "Normal case: 2003-03-11 00:00:00, multiply by 5\n",
+      "Normal case: 2003-03-16 00:00:00, multiply by 5\n",
+      "Normal case: 2003-03-21 00:00:00, multiply by 5\n",
+      "Normal case: 2003-03-26 00:00:00, multiply by 5\n",
+      "Normal case: 2003-03-31 00:00:00, multiply by 5\n",
+      "31 31\n",
+      "Normal case: 2003-04-05 00:00:00, multiply by 5\n",
+      "Normal case: 2003-04-10 00:00:00, multiply by 5\n",
+      "Normal case: 2003-04-15 00:00:00, multiply by 5\n",
+      "Normal case: 2003-04-20 00:00:00, multiply by 5\n",
+      "Normal case: 2003-04-25 00:00:00, multiply by 5\n",
+      "Normal case: 2003-04-30 00:00:00, multiply by 5\n",
+      "30 30\n",
+      "Normal case: 2003-05-05 00:00:00, multiply by 5\n",
+      "Normal case: 2003-05-10 00:00:00, multiply by 5\n",
+      "Normal case: 2003-05-15 00:00:00, multiply by 5\n",
+      "Normal case: 2003-05-20 00:00:00, multiply by 5\n",
+      "Normal case: 2003-05-25 00:00:00, multiply by 5\n",
+      "Normal case: 2003-05-30 00:00:00, multiply by 5\n",
+      "End of month: 2003-06-04 00:00:00, multiply by 1\n",
+      "31 31\n",
+      "Start of month: 2003-06-04 00:00:00, multiply by 4\n",
+      "Normal case: 2003-06-09 00:00:00, multiply by 5\n",
+      "Normal case: 2003-06-14 00:00:00, multiply by 5\n",
+      "Normal case: 2003-06-19 00:00:00, multiply by 5\n",
+      "Normal case: 2003-06-24 00:00:00, multiply by 5\n",
+      "Normal case: 2003-06-29 00:00:00, multiply by 5\n",
+      "End of month: 2003-07-04 00:00:00, multiply by 1\n",
+      "30 30\n",
+      "Start of month: 2003-07-04 00:00:00, multiply by 4\n",
+      "Normal case: 2003-07-09 00:00:00, multiply by 5\n",
+      "Normal case: 2003-07-14 00:00:00, multiply by 5\n",
+      "Normal case: 2003-07-19 00:00:00, multiply by 5\n",
+      "Normal case: 2003-07-24 00:00:00, multiply by 5\n",
+      "Normal case: 2003-07-29 00:00:00, multiply by 5\n",
+      "End of month: 2003-08-03 00:00:00, multiply by 2\n",
+      "31 31\n",
+      "Start of month: 2003-08-03 00:00:00, multiply by 3\n",
+      "Normal case: 2003-08-08 00:00:00, multiply by 5\n",
+      "Normal case: 2003-08-13 00:00:00, multiply by 5\n",
+      "Normal case: 2003-08-18 00:00:00, multiply by 5\n",
+      "Normal case: 2003-08-23 00:00:00, multiply by 5\n",
+      "Normal case: 2003-08-28 00:00:00, multiply by 5\n",
+      "End of month: 2003-09-02 00:00:00, multiply by 3\n",
+      "31 31\n",
+      "Start of month: 2003-09-02 00:00:00, multiply by 2\n",
+      "Normal case: 2003-09-07 00:00:00, multiply by 5\n",
+      "Normal case: 2003-09-12 00:00:00, multiply by 5\n",
+      "Normal case: 2003-09-17 00:00:00, multiply by 5\n",
+      "Normal case: 2003-09-22 00:00:00, multiply by 5\n",
+      "Normal case: 2003-09-27 00:00:00, multiply by 5\n",
+      "End of month: 2003-10-02 00:00:00, multiply by 3\n",
+      "30 30\n",
+      "Start of month: 2003-10-02 00:00:00, multiply by 2\n",
+      "Normal case: 2003-10-07 00:00:00, multiply by 5\n",
+      "Normal case: 2003-10-12 00:00:00, multiply by 5\n",
+      "Normal case: 2003-10-17 00:00:00, multiply by 5\n",
+      "Normal case: 2003-10-22 00:00:00, multiply by 5\n",
+      "Normal case: 2003-10-27 00:00:00, multiply by 5\n",
+      "End of month: 2003-11-01 00:00:00, multiply by 4\n",
+      "31 31\n",
+      "Start of month: 2003-11-01 00:00:00, multiply by 1\n",
+      "Normal case: 2003-11-06 00:00:00, multiply by 5\n",
+      "Normal case: 2003-11-11 00:00:00, multiply by 5\n",
+      "Normal case: 2003-11-16 00:00:00, multiply by 5\n",
+      "Normal case: 2003-11-21 00:00:00, multiply by 5\n",
+      "Normal case: 2003-11-26 00:00:00, multiply by 5\n",
+      "End of month: 2003-12-01 00:00:00, multiply by 4\n",
+      "30 30\n",
+      "Start of month: 2003-12-01 00:00:00, multiply by 1\n",
+      "Normal case: 2003-12-06 00:00:00, multiply by 5\n",
+      "Normal case: 2003-12-11 00:00:00, multiply by 5\n",
+      "Normal case: 2003-12-16 00:00:00, multiply by 5\n",
+      "Normal case: 2003-12-21 00:00:00, multiply by 5\n",
+      "Normal case: 2003-12-26 00:00:00, multiply by 5\n",
+      "Normal case: 2003-12-31 00:00:00, multiply by 5\n",
+      "31 31\n"
+     ]
+    }
+   ],
+   "source": [
+    "for year in range(2002,2004):\n",
+    "    for month in range(1,13):\n",
+    "        oMn_ave = calculate_monthly_oMn_average(f'/data/brogalla/run_storage/Mn-extended-domain-202210/Mn-extended-{year}-20220927/', \\\n",
+    "                                                year, month)"
    ]
   },
   {
